added infra for test exploit and example code